--- a/Payroll_Web_App.Server/appsettings.json
+++ b/Payroll_Web_App.Server/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\ProjectModels;Database=PayrollDB;Trusted_Connection=True;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
