--- a/Payroll_Web_App.Server/Payroll_Web_App.Server.csproj
+++ b/Payroll_Web_App.Server/Payroll_Web_App.Server.csproj
@@ -13,6 +13,7 @@
     <PackageReference Include="Microsoft.AspNetCore.SpaProxy">
       <Version>8.*-*</Version>
     </PackageReference>
+    <PackageReference Include="Microsoft.Data.SqlClient" Version="6.1.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.6.2" />
   </ItemGroup>
 
