--- a/Payroll_Web_App.Server/appsettings.json
+++ b/Payroll_Web_App.Server/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=sql.toncom159.com;Database=PayrollDB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True"
+    "DefaultConnection": "Server=sql.toncom159.com;Database=Payroll_DB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
