--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-version: "3.9"
-
 services:
   backend:
     build:
@@ -8,9 +6,9 @@ services:
     container_name: payroll_api
     environment:
       - ASPNETCORE_ENVIRONMENT=Production
-      - ConnectionStrings__DefaultConnection=Server=Server=sql.toncom159.com;Database=Payroll_DB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True;
+      - ConnectionStrings__DefaultConnection=Server=sql.toncom159.com;Database=Payroll_DB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True
     ports:
-      - "5000:8080"
+      - "5000:8080"   # Exposed to host
     networks:
       - payroll_net
 
@@ -18,6 +16,8 @@ services:
     build:
       context: ./payroll_web_app.client
       dockerfile: Dockerfile
+      args:
+        VITE_API_URL: "http://backend:8080/api"
     container_name: payroll_client
     ports:
       - "5173:80"
