JWT and .NET9 switch
Updated project to .Net9, cleaned up old weather files, added JWT authentication

--- a/Payroll_Web_App.Server/appsettings.json
+++ b/Payroll_Web_App.Server/appsettings.json
@@ -2,11 +2,18 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=sql.toncom159.com;Database=Payroll_DB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True"
   },
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+
+  "Jwt": {
+    "Key": "ixCV7IRimj1kCGPFAxDzIaVm52SevysoLEWqwXnF7yE=!",
+    "Issuer": "PayrollWebApp",
+    "Audience": "PayrollWebAppUsers",
+    "ExpireMinutes": 60
   },
-  "AllowedHosts": "*"
-}
+    "Logging": {
+      "LogLevel": {
+        "Default": "Information",
+        "Microsoft.AspNetCore": "Warning"
+      }
+    },
+    "AllowedHosts": "*"
+  }
