--- a/Payroll_Web_App.Server/appsettings.json
+++ b/Payroll_Web_App.Server/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=sql.toncom159.com;Database=Payroll_DB;User Id=Guest;Password=StrongPassword123!;Encrypt=False;TrustServerCertificate=True"
   },
@@ -9,11 +15,14 @@
     "Audience": "PayrollWebAppUsers",
     "ExpireMinutes": 60
   },
-    "Logging": {
-      "LogLevel": {
-        "Default": "Information",
-        "Microsoft.AspNetCore": "Warning"
-      }
-    },
-    "AllowedHosts": "*"
+
+  "AllowedHosts": "*",
+
+  "PayrollSettings": {
+    "StandardHours": 40,
+    "HourlyRateDefault": 35.00,
+    "OvertimeMultiplier": 1.5,
+    "TaxRate": 0.20,
+    "BenefitsRate": 0.05
   }
+}
