--- a/payroll_web_app.client/package.json
+++ b/payroll_web_app.client/package.json
@@ -16,7 +16,7 @@
     "jspdf-autotable": "^5.0.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
-    "react-router-dom": "^7.9.4"
+    "react-router-dom": "^7.9.4",
     "chart.js": "^4.3.0"
   },
   "devDependencies": {
